test/negative/NativeWithoutStaticMethod.java
public class NativeWithoutStaticMethod {
    public NativeWithoutStaticMethod() {}
    public native void f();
}
